# local-llm-pdf-ocr

./: AGENT.md  README.md  debug_alignment.py  debug_detection_only.py  hybrid_aligner.py  inspect_pdf.py  main.py  pdf_utils.py  pyproject.toml  server.py  test_check.py  tqdm_patch.py  visualize_bboxes.py  visualize_comparison.py
scripts/: debug_alignment.py  debug_detection_only.py  inspect_pdf.py  test_check.py  verify_output.py  visualize_bboxes.py  visualize_comparison.py
src/pdf_ocr/: __init__.py
src/pdf_ocr/core/: __init__.py  aligner.py  ocr.py  pdf.py
src/pdf_ocr/utils/: __init__.py  tqdm_patch.py
static/: script.js
